# Learning-Gait-with-Reinforcement-Learning

./: CMakeLists.txt  README.md  animated_box.cc  animated_box.world  integrated_main.cc  move_legs.cc  six_legs.world  turn_wheels.cc  wheels.world
model_editor_models/Crab/: model.sdf
model_editor_models/CrabLeg/: model.sdf
model_editor_models/EvenLeg/: model.config  model.sdf
model_editor_models/Side/: model.sdf
model_editor_models/SideLeg/: model.config
model_editor_models/leg2/: model.sdf
model_editor_models/simplefour/: model.config  model.sdf
model_editor_models/simplesix/: model.config  model.sdf
models/Crab/: model.config  model.sdf
models/CrabLeg/: model.config  model.sdf
models/Even/: model.config  model.sdf
models/EvenLeg/: model.sdf
models/Side/: model.config  model.sdf
models/SideLeg/: model.sdf
models/leg2/: model.config  model.sdf
models/simplefour/: model.config~  model.sdf  model.sdf~
models/simplesix/: model.sdf
reinforcementLearning/: qLearning.cpp  qLearning.h  sixLeggedForceEnvironment.h  sixLeggedTeleportEnvironment.h  sixtLeggedVelocityEnvironment.h  test  test.cc  test.h  toyEnvironment.h  wheelRobotEnvironment.cc  wheelRobotEnvironment.h  wheeledRobotEnvironment2.h
sloppyModels/LessJoints/: model.config  model.sdf
sloppyModels/NewLeg/: model.config  model.sdf
